# explore.clang-tidy

./: .clang-tidy  .clang-tidy.json  .clangd  .codechecker.skip_file  .editorconfig  .envrc  .gitignore  .just.glob.py  CMakeLists.txt  CMakePresets.json  DEVELOPMENT.rst  README.rst  cmake_build.yaml  invoke.yaml  justfile  py.requirements.txt  tasks.py
clang-tidy-mistakes/: .gitrepo
